[project]
name = "gpt-cli"
version = "1.1"
requires-python = ">3.11"
dependencies = ["openai", "anthropic", "tiktoken", "typer", "rapidfuzz"]

optional-dependencies.dev = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
